--- a/styles/global.css
+++ b/styles/global.css
@@ -90,8 +90,14 @@ a:hover {
   color: transparent;
 }
 
+
 ul[role="list"] {
   list-style: none;
+}
+
+img {
+    max-width: 100%;
+    display: inline-block;
 }
 
 @media (width >=80em) {
